# EmbedChess

./: .gitignore
Tranceiver/: .mxproject  CMakeLists.txt  CMakeSettings.json  Makefile  Tranciever.ioc  toolchain.cmake
Tranceiver/Core/: CMakeLists.txt
Tranceiver/Core/Src/: main.c  stm32f1xx_hal_msp.c
Tranceiver/Drivers/: CMakeLists.txt
Tranceiver/Drivers/CMSIS/: CMakeLists.txt
Tranceiver/Drivers/CMSIS/Device/ST/STM32F1xx/: CMakeLists.txt
Tranceiver/Drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt
